# document-copilot

./: .gitignore  AGENTS.md  README.md  context.md  prompts.md  skill.md  todo.md
.devcontainer/: Dockerfile  devcontainer.json
backend/: .env.example  AGENTS.md  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 574f1e5273d6_initial_schema.py
backend/app/: config.py  main.py
backend/app/api/: chat.py
backend/app/assistant/: __init__.py  agent.py  deps.py  instructions.md  outputs.py
backend/app/auth/: dependencies.py
backend/app/chat/: events.py  persistence.py  pipeline.py  router.py
backend/app/database/: __init__.py  supabase.py
backend/app/database/models/: __init__.py  chat_message.py  chat_thread.py  document_chunk.py  message_citation.py  source_document.py  user.py
backend/app/grounding/: __init__.py  validator.py
backend/app/retrieval/: README.md  __init__.py  fusion.py  queries.py  query_refinery.py  retriever.py
backend/ingest/: chunk_and_load.py  load_source_documents.py
backend/tests/assistant/: test_agent.py
backend/tests/chat/: test_events.py  test_persistence.py  test_pipeline.py
backend/tests/grounding/: test_validator.py
backend/tests/retrieval/: test_fusion.py  test_query_refinery.py
data/: README.md  convert_md.py  download.py
docs/: architecture.md  client-brief.md  phase-3-frontend-plan.md  phase-3-plan.md  phase-4-plan.md  phase-5-plan.md  phase-6-plan.md  phase-7-plan.md  phase-8-plan.md  phase-9-plan.md
frontend/: .env.example  .npmrc  AGENTS.md  package.json  (+3 more)
(+45 files in other folders)
