[project]
name = "document-copilot-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.4",
    "fastapi==0.137.2",
    "httpx==0.28.1",
    "openai==2.43.0",
    "pgvector==0.4.2",
    "psycopg[binary]==3.3.4",
    "pydantic==2.13.4",
    "pydantic-ai==1.107.0",
    "pydantic-settings==2.14.2",
    "sqlalchemy==2.0.51",
    "structlog==26.1.0",
    "supabase==2.31.0",
    "uvicorn==0.49.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require live Ollama / Supabase (deselect with '-m \"not integration\"')",
]
asyncio_default_fixture_loop_scope = "function"

[tool.uv]
add-bounds = "exact"
exclude-newer = "7 days"

[dependency-groups]
dev = [
    "docling==2.104.0",
    "ipykernel==7.3.0",
    "pytest==8.3.5",
    "pytest-asyncio==0.26.0",
]
